Added basic dynamic styling with attribute

--- a/ricardo-ui-alert.css
+++ b/ricardo-ui-alert.css
@@ -14,25 +14,41 @@
 
 #alert-container {
   border-radius: 5px 5px;
-  background-color: rgb(69, 219, 69);
   padding: 5px 15px;
   display: block;
+  background-color: rgb(69, 219, 69);
 }
 
-#alert-close-handle {
+#alert-container.success {
+  background-color: rgb(69, 219, 69);
+}
+
+#alert-container.error {
+  background-color: red;
+}
+
+#alert-container.info {
+  background-color: blue;
+}
+
+#alert-container.warning {
+  background-color: yellow;
+}
+
+#alert-close {
   float: right;
   font-size: 13pt;
   padding: 2px 2px;
 }
 
-#alert-close-handle a {
+#alert-close a {
   text-decoration: none;
   color: inherit;
   display: block;
   padding: 3px 3px;
 }
 
-#alert-close-handle a:hover {
+#alert-close a:hover {
   background-color: rgb(157, 226, 168);
   border-radius: 5px 5px;
 }
