Modified demo page

--- a/ricardo-ui-alert.css
+++ b/ricardo-ui-alert.css
@@ -17,7 +17,7 @@
   padding: 5px 15px;
   display: block;
   background-color: rgb(69, 219, 69);
-  -webkit-transition: opacity 1s;
+  transition: opacity 1s;
   opacity: 1;
 }
 
@@ -74,8 +74,6 @@
 
 #alertClose button:hover {
   color: #000;
-  text-decoration: none;
-  cursor: pointer;
   filter: alpha(opacity=50);
   opacity: .5;
 }
